[gd_scene load_steps=10 format=3 uid="uid://d106rwbh08gta"]

[ext_resource type="Script" path="res://ui/default_ui/default_ui.gd" id="1_l2c3q"]
[ext_resource type="Script" path="res://modules/rooms/scene_transition_test_1/scene_transition_test_1.gd" id="1_xdfnu"]
[ext_resource type="TileSet" uid="uid://cmkmctdnp03li" path="res://assets/tilesets/test_action_tileset.tres" id="1_yupo4"]
[ext_resource type="PackedScene" uid="uid://407wdynbq2ld" path="res://modules/characters/player/player.tscn" id="2_dw4u1"]
[ext_resource type="PackedScene" uid="uid://l31ck38gimwi" path="res://modules/camera/camera.tscn" id="2_miee2"]
[ext_resource type="PackedScene" uid="uid://c61di70f3r436" path="res://modules/exit_area/exit_area.tscn" id="4_cljks"]
[ext_resource type="PackedScene" uid="uid://qs68eec7vhuw" path="res://modules/rooms/refactor_room/refactor_room.tscn" id="5_2o8nj"]
[ext_resource type="PackedScene" uid="uid://fy55thn23ao5" path="res://modules/player_spawn_point/player_spawn_point.tscn" id="6_bcltr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lv1m"]
size = Vector2(16, 64)

[node name="SceneTransitionTest1" type="Node2D"]
script = ExtResource("1_xdfnu")
Player = ExtResource("2_dw4u1")

[node name="Map" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_yupo4")
format = 2
layer_0/name = "Floor"
layer_0/y_sort_enabled = true
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(65543, 65536, 5, 7, 65536, 5, 65542, 65536, 5, 6, 65536, 5, 65541, 65536, 5, 5, 65536, 5, 65540, 65536, 5, 4, 65536, 5, 65539, 65536, 5, 3, 65536, 5, 65538, 65536, 5, 2, 65536, 5, 65537, 65536, 5, 1, 65536, 5, 65536, 65536, 5, 0, 65536, 5, 131071, 0, 5, 65535, 0, 5, -1, 0, 4, -65536, 65536, 4, -65535, 65536, 4, 131073, 65536, 6, 131072, 65536, 6, 196607, 0, 6, -65534, 65536, 4, 131074, 65536, 6, -65533, 65536, 4, 131075, 65536, 6, -65532, 65536, 4, 131076, 65536, 6, -65531, 65536, 4, 131077, 65536, 6, -65530, 65536, 4, 131078, 65536, 6, -65529, 65536, 4, 131079, 65536, 6, 8, 131072, 5, 65544, 131072, 5, -65528, 131072, 4, 131080, 131072, 6)

[node name="ExitArea" parent="Map" instance=ExtResource("4_cljks")]
target_scene = ExtResource("5_2o8nj")
target_spawn = "from_transition_test"

[node name="Collision" parent="Map/ExitArea" index="0"]
position = Vector2(-24, 16)
shape = SubResource("RectangleShape2D_1lv1m")

[node name="SpawnPointContainer" type="Node" parent="Map"]

[node name="DefaultSpawnPoint" parent="Map/SpawnPointContainer" instance=ExtResource("6_bcltr")]
position = Vector2(128, 16)

[node name="PlayerSpawnPoint" parent="Map/SpawnPointContainer" instance=ExtResource("6_bcltr")]
position = Vector2(0, 16)
spawn_id = "from_refactor_room"

[node name="DefaultUI" type="CanvasLayer" parent="."]
script = ExtResource("1_l2c3q")

[node name="Camera" parent="." instance=ExtResource("2_miee2")]

[editable path="Map/ExitArea"]
